<resources>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="app_name">Ayenosis</string>
    <string name="splash_screen_subtitle">Ayenosis</string>
    <string name="ayenosis">Ayenosis</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="choose_register">Register</string>
    <string name="punya">Already have an account?</string>
    <string name="choose_login">Login now!</string>
    <string name="intro_title">Welcome to Ayenosis</string>
    <string name="intro_descTitle1">Quick Fix</string>
    <string name="intro_descLine1">Stay healthy.</string>
    <string name="intro_descLine2">Get a quick check up of your eyes.</string>
    <string name="next_screen">Next</string>
    <string name="intro_title2">An eye diagnosis app</string>
    <string name="intro_descTitle2">Portable Report</string>
    <string name="intro2_descLine1">Mobility; a concern no more.</string>
    <string name="intro2_descLine2">The diagnosis is in your pocket.</string>
    <string name="last_screen">START NOW</string>
    <string name="intro_title3">Made for you</string>
    <string name="intro_descTitle3">Know-how</string>
    <string name="intro3_descLine1">Learn various diseases,</string>
    <string name="intro3_descLine2">This is the window of knowledge.</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="login_button_string">LOGIN</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="upload_from_file">Upload From File</string>
    <string name="take_from_camera">Take From Camera</string>
    <string name="upload_image">Upload Image</string>

    <string-array name="question">
        <item>1. What is Ayenosis?</item>
        <item>2. How many diseases can Ayenosis detect?</item>
        <item>3. How to use Ayenosis?</item>
        <item>4. How accurate is Ayenosis?</item>
        <item>5. Does Ayenosis need an external device?</item>
        <item>6. How much does the Ayenosis lens cost?</item>
        <item>7. Can we only use Ayenosis to diagnose?</item>
        <item>8. Is it scientifically based?</item>
    </string-array>

    <string-array name="answer">
        <item>Ayenosis is an Android Application that can help in the early prediction of several diseases that can be seen through the retina of the eye. One of the diseases that can be checked is cataract​
</item>
        <item>In the initial deployment, Ayenosis will only focus on the detection of one disease which is Cataract.
        However, later on, we are planning to include more diseases, such as Glaucoma, Diabetes, Pathological Myopia, etc.</item>
        <item>- Login to your account or Register\n
            - Snap a picture or upload an image file of a retina picture taken by mobile camera and 3D printed external tools\n
        - Get the result after our machine learning has finished processing the image\n
        - The result will be automatically saved and can be used as a reference when consulting with your doctor</item>
        <item>For cataract, the test accuracy is about 90.96%, while the validation accuracy is approximately 85.5%</item>
        <item>Yes, Ayenosis needs a 3D printed frame. It will be combined with a 20D lens to capture the retina. </item>
        <item>Typically, fundus or retinal cameras can cost between $1,000 – $30,000. However, we‘ll use an open-source 3D printed frame and combine it with a 20D lens. As such, the total cost will be less than $200</item>
        <item>No, it is strongly prohibited to diagnose only with Ayenosis. Ayenosis is used to detect the diseases on the early stage.
        Further diagnosis in the hospital is needed and highly encouraged.</item>
        <item>Yes, it is. Ayenosis was made based on several studies, papers and journals.</item>
    </string-array>

</resources>