<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_signup"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/ayenosis"
        android:layout_width="184dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:text="@string/ayenosis"
        android:textAppearance="@style/ayenosis1"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        />

    <ImageView
        android:id="@+id/logo_2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:src="@drawable/logoawal"
        android:background="@drawable/logo_2"
        />

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="281dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="310dp"
        android:background="@drawable/rectangle_4"
        />

    <EditText
        android:id="@+id/et_email_su"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="330dp"
        android:background="@color/white"
        android:inputType="textEmailAddress"
        android:hint="@string/email_login"
        android:textSize="18sp"
        android:padding="5dp"
        />

    <EditText
        android:id="@+id/et_password_su"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="384dp"
        android:background="@color/white"
        android:inputType="textPassword"
        android:hint="@string/password_login"
        android:padding="5dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/et_uname_su"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="438dp"
        android:background="@color/white"
        android:inputType="text"
        android:hint="@string/username"
        android:padding="5dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/et_age_su"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="494dp"
        android:background="@color/white"
        android:inputType="text|number"
        android:hint="@string/age"
        android:padding="5dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/et_jns_su"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="545dp"
        android:background="@color/white"
        android:inputType="text"
        android:hint="@string/gender"
        android:padding="5dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/sign_btn"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="600dp"
        android:background="@color/grey"
        android:textColor="@color/white"
        android:text="@string/choose_register"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/text_untuk"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="665dp"
        android:text="@string/punya"
        android:textAppearance="@style/don_t_have_"
        />

    <TextView
        android:id="@+id/kesignup"
        android:layout_width="176dp"
        android:layout_height="39dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="695dp"
        android:text="@string/choose_login"
        android:textAppearance="@style/kesignup"
        />


</RelativeLayout>