<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/intro_1">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="110dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="622dp" />

    <TextView
        android:id="@+id/intro_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/reemkufi_regular"
        android:gravity="center"
        android:text="@string/intro_title"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_intro1"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_hor1"
        app:srcCompat="@drawable/logointro" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="170dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_hor2"
        app:srcCompat="@drawable/ic_wave1" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_hor2"
        app:layout_constraintVertical_bias="1"
        app:srcCompat="@drawable/ic_wave2" />

    <TextView
        android:id="@+id/intro_descTitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/reemkufi_regular"
        android:text="@string/intro_descTitle1"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/guideline_ver1"
        app:layout_constraintTop_toTopOf="@id/guideline_hor21" />

    <TextView
        android:id="@+id/intro_desc1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/reemkufi_regular"
        android:text="@string/intro_descLine1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/guideline_ver1"
        app:layout_constraintTop_toBottomOf="@id/intro_descTitle1" />

    <TextView
        android:id="@+id/intro_desc2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/reemkufi_regular"
        android:text="@string/intro_descLine2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/guideline_ver1"
        app:layout_constraintTop_toBottomOf="@id/intro_desc1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button1"
        android:fontFamily="@font/reemkufi_regular"
        android:onClick="nextPage"
        android:text="@string/next_screen"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_ver4"
        app:layout_constraintStart_toStartOf="@id/guideline_ver2"
        app:layout_constraintTop_toBottomOf="@id/intro_desc2" />

</androidx.constraintlayout.widget.ConstraintLayout>